[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mait-code"
version = "0.3.0"
description = "Companion framework extending Claude Code with persistent memory, identity, and skills"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26.0",
    "sqlite-vec>=0.1.3",
    "dateparser>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
mc-hook-session-start = "mait_code.hooks.session_start:main"
mc-hook-observe = "mait_code.hooks.observe:main"
mc-hook-format = "mait_code.hooks.auto_format:main"
mc-tool-memory = "mait_code.tools.memory:main"
mc-mcp-reminders = "mait_code.mcp.reminders_server:main"
mc-tool-reflect = "mait_code.tools.reflect:main"
mc-tool-rebuild-db = "mait_code.tools.rebuild_db:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
