[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mait-code"
version = "0.11.0"
description = "Companion framework extending Claude Code with persistent memory, identity, and skills"
requires-python = ">=3.13"
dependencies = [
    "sqlite-vec>=0.1.3",
    "dateparser>=1.3.0",
    "pyyaml>=6.0.3",
    "fastembed>=0.4.0",
]

[project.scripts]
mc-hook-session-start = "mait_code.hooks.session_start.cli:main"
mc-hook-observe = "mait_code.hooks.observe.cli:main"
mc-hook-format = "mait_code.hooks.auto_format.cli:main"
mc-tool-memory = "mait_code.tools.memory.cli:main"
mc-tool-reminders = "mait_code.tools.reminders.cli:main"
mc-tool-tasks = "mait_code.tools.tasks.cli:main"
mc-tool-decisions = "mait_code.tools.decisions.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
