[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mait-code"
version = "0.64.0"
description = "Companion framework extending Claude Code with persistent memory, identity, and skills"
requires-python = ">=3.13"
dependencies = [
    "sqlite-vec>=0.1.3",
    "dateparser>=1.3.0",
    "pyyaml>=6.0.3",
    "fastembed>=0.4.0",
    "truststore>=0.9",
    "markdownify>=0.14",
    "typer>=0.12,<1",
    "textual>=0.86",
    "netext>=0.5.0",
]

[project.scripts]
mait-code = "mait_code.cli:main"
mc-hook-session-start = "mait_code.hooks.session_start.cli:main"
mc-hook-observe = "mait_code.hooks.observe.cli:main"
mc-hook-format = "mait_code.hooks.auto_format.cli:main"
mc-tool-memory = "mait_code.tools.memory.cli:main"
mc-tool-reminders = "mait_code.tools.reminders.cli:main"
mc-tool-board = "mait_code.tools.board.cli:main"
mc-tool-inbox = "mait_code.tools.inbox.cli:main"
mc-tool-web-fetch = "mait_code.tools.web_fetch.cli:main"

[project.optional-dependencies]
bedrock = ["boto3>=1.34"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mike>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=mait_code --cov-report=term-missing"

[tool.coverage.run]
source = ["mait_code"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src"]
